<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_action_type" />

    <Spinner
        android:id="@+id/use_action_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/use_action_in_or_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textOff="@string/use_action_expenditure"
        android:textOn="@string/use_action_income" />

    <TextView
        android:id="@+id/web_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_action_value" />

    <EditText
        android:id="@+id/use_action_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_action_reason" />

    <Spinner
        android:id="@+id/use_action_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>